# tpmp-lab4

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
data/: autopark.db  autopark_create.sql
docs/: index.html
icludes/: db_core.h
include/: business_logic.h  crud.h  db_core.h  models.h  reports.h
src/: CMakeLists.txt  business_logic.c  crud.c  db_core.c  main.c  reports.c
t/: CMakeCache.txt  Makefile  cmake_install.cmake
t/src/: Makefile  autopark_exe  cmake_install.cmake
t/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  runTests  runTests[1]_include.cmake  runTests[1]_tests.cmake
tests/: CMakeLists.txt  test_branch_coverage.cpp  test_branch_coverage2.cpp  test_business_logic.cpp  test_crud.cpp  test_db_core.cpp  test_main.cpp  test_reports.cpp
